--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Skyblock
 version: '${project.version}'
 main: com.sweattypalms.skyblock.SkyBlock
-api-version: '1.8.8'
+api-version: "1.13"
 authors: [ sweattypalms, devil_gamer_xd, shlok ]
 description: A Hypixel Skyblock remake plugin
 website: sweattypalms.me
