--- a/pom.xml
+++ b/pom.xml
@@ -214,5 +214,12 @@
             <version>11.2.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldedit</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/WorldEdit.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
